test/error/LexLiteralCharInvalid.ci
public static class Test
{
	public static bool Run()
	{
		int a = '	'; //ERROR: Invalid character in literal
		return true;
	}
}
